[package]
name = "clipsync"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/masonj188/clipsync"
description = "A neovim plugin and server to sync the contents of a remote neovim's '+' buffer with the clipboard of the host machine"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clipboard = "0.5.0"
log = "0.4.17"
neovim-lib = "0.6.1"
prost = "0.10.4"
simple-logging = "2.0.2"
snailquote = "0.3.1"
tokio = { version = "1.18.2", features = ["full"] }
tonic = "0.7.2"

[build-dependencies]
tonic-build = "0.7.2"
