[package]
name = "clipsync"
version = "0.2.4"
edition = "2021"
readme = "README.md"
repository = "https://github.com/masonj188/clipsync"
description = "A neovim plugin and server to sync the contents of a remote neovim's '+' buffer with the clipboard of the host machine"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clipboard = "0.5.0"
log = "0.4.17"
neovim-lib = "0.6.1"
prost = "0.11.5"
simple-logging = "2.0.2"
snailquote = "0.3.1"
tokio = { version = "1.24.1", features = ["full"] }
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"
